[gd_scene load_steps=3 format=3 uid="uid://dbaytkdo51oyh"]

[ext_resource type="Script" uid="uid://bdx3taia46ix" path="res://scenes/UI/ObjectPanel.gd" id="1_1kk1h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uprsm"]
bg_color = Color(0.187176, 0.187176, 0.187176, 1)

[node name="ObjectPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1kk1h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 115.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uprsm")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "{}"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Distance: {}"

[node name="ProximityLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Proximity: {}"
